# librespot-metadata

./: Cargo.toml
