[package]
name = "librespot-metadata"
version = "0.4.2"
authors = ["Paul Lietar <paul@lietar.net>"]
description = "The metadata logic for librespot"
license = "MIT"
repository = "https://github.com/librespot-org/librespot"
edition = "2018"

[dependencies]
async-trait = "0.1"
byteorder = "1.3"
protobuf = "2.14.0"
log = "0.4"

[dependencies.librespot-core]
git = "https://github.com/DaBigBlob/librespot-core"
version = "0.4.2"
[dependencies.librespot-protocol]
git = "https://github.com/DaBigBlob/librespot-protocol"
version = "0.4.2"
